syntax = "proto3";

package user;

service UserService {
    rpc FindById (FindByIdRequest) returns (User) {}
}

message User {
    string name = 1;
}

message FindByIdRequest {
    string id = 1;
}
